# claude-web-tunnel

./: .gitignore  Cargo.toml  LICENSE  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  clean.ps1  clean.sh
.cargo/: config.toml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: cli.rs  config.rs  connection.rs  instance.rs  logging.rs  main.rs  pty.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/server/: Cargo.toml
crates/server/migrations/mysql/: 001_create_agents.sql  002_agent_tags.sql  003_terminal_history.sql  004_audit_logs.sql
crates/server/migrations/sqlite/: 001_create_agents.sql  002_agent_tags.sql  003_terminal_history.sql  004_audit_logs.sql
crates/server/src/: auth.rs  cli.rs  config.rs  logging.rs  main.rs  rate_limit.rs  routes.rs  state.rs  static_files.rs  ws_agent.rs  ws_user.rs
crates/server/src/db/: mod.rs  repository.rs  schema.rs
deploy/: README.md  install.sh
deploy/configs/: agent.toml.example  mysql.sql  server.toml.example
deploy/scripts/: install-agent.sh  install-mysql.sh  install-nginx.sh  install-redis.sh  install-server.sh  utils.sh
deploy/systemd/: claude-tunnel.service
docs/memory/: backlog.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: AdminPanel.svelte  AuditLogViewer.svelte  InstallPrompt.svelte  Instances.svelte  Login.svelte  ReconnectToast.svelte  TagEditor.svelte  TagSelector.svelte  Terminal.svelte
web/src/services/: websocket.ts
web/src/stores/: index.ts  searchHistory.ts  tags.ts  theme.ts
web/src/types/: index.ts
web/src/utils/: search.ts  viewport.ts
