[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "claude-tunnel-agent"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
portable-pty = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hostname = "0.4"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }

[build-dependencies]
thunk-rs = "0.3"
