[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "claude-tunnel-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = "0.4"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
